corrected white space error on show cruise

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,6 +1,5 @@
 .alert {
   position: fixed;
-  bottom: 16px;
-  right: 16px;
+  top: 30px;
   z-index: 1000;
 }
